Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  
#kubectl create ns dev [optinal]
#kubectl get pods -n dev
#kubectl config set-context $(kubectl config current-context) --ns=dev
#kubectl get pods ns -A


apiVersion: v1
kind: ResourceQuota
metadata:
  name: compute-quota
  namespace: dev
spec:
  hard:
    pods: "10"
    requests.cpu: "4"
    requests.memory: 5Gi
    limits.cpu: "10"
    limits.memory: 10Gi
    
#kubectl create -f compute-def.yaml
