Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
    type: front-end
spec:
 template:
   metadata:
     name: myapp-pod
     labels:
       app: myapp
       type: front-end
   spec:
     containers:
       - name: nginx-container
         image: nginx:latest
 replicas: 1  
 selector:
   matchLabels:
     type: front-end
     
     
#kubectl create deploy-definition.yaml
#kubectl get deployment or deploy
#kubectl get rs
#kubectl get pods
#kubectl get all
#kubectl delete deployment myapp-deployment
