StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    app: mysql
spec:
 template:
   metadata:
     name: mysql
     labels:
       app: mysql
   spec:
     containers:
       - name: mysql
         image: mysql
 replicas: 3  
 selector:
   matchLabels:
     app: mysql
 serviceName: mysql-h
#podManagementPolicy: Parallel 

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    app: mysql
spec:
 replicas: 3  
 selector:
   matchLabels:
     app: mysql
 template:
   metadata:
     name: mysql
     labels:
       app: mysql
   spec:
     containers:
       - name: mysql
         image: mysql
         volumeMounts:
         - mountPath: /var/lib/mysql
           name: data-volume    
 volumeClaimTemplates:
  - metadata:
      name: data-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "google-storage"
      resources:
        requests:
          storage: 500Mi
