job.yaml
apiVersion: v1
kind: Pod
metadata:
  name: math-pod
spec:
  containers:
    - name: math-pod
      image: ubuntu
      command: ['expr', '3', '+', '2']
  restartPolicy: Never

---
#kubectl get jobs

#kubectl logs job-name

#kubectl delete job job-name

---
