livenessProbe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp
  labels:
    app: simple-webapp
spec:
  containers:
    - name: simple-webapp
      image: simple-webapp
      ports:
       - containerPort: 8080
      livenessProbe:
       httpGet:
         path: /api/healthy
         port: 8080
       initialDelaySeconds: 10
       periodSeconds: 5
       failureThreshold: 8
         
---
      readinessProbe:
       tcpSocket:
         port: 3306

---
      readinessProbe:
       exec:
         command:
           - cat
           - /app/is_healthy
