nodeAntifinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: data-processor
      image: data-processor
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: size
            operator: In
            values:
            - Large
            - Medium
 
---
          - key: size
            operator: NotIn
            values:
            - small

---
          - key: size
            operator: Exists

---
#Name: red

#Replicas: 2

#Image: nginx

#NodeAffinity: requiredDuringSchedulingIgnoredDuringExecution

#Key: node-role.kubernetes.io/control-plane

#Use the right operator
