pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
    type: front-end
spec:
  containers:
    - name: nginx-container
      image: nginx
      
#kubectl create -f pod.yaml
#kubectl get pods
#kubectl describe pod myapp-pod
#kubectl get pods -o wide
#kubectl delete pod myapp-pod
