resource-request.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp-color
  labels:
    app: simple-webapp-color
spec:
  containers:
    - name: simple-webapp-color
      image: simple-webapp-color
      ports:
       - containerPort: 8080
      resources:
        requests:
          memory: "1Gi"
          cpu: 1
        limits:
          memory: "2Gi"
          cpu: 2

---

#1 G (Gigabyte) = 1,000,000,000 bytes
#1 M (Megabyte) = 1,000,000 bytes

#1 Gi (Gigibyte) = 1,073,741,824 bytes
#1 Mi (Mebibyte) = 1,048,576 bytes
