secret.yaml

apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp-color
  labels:
    app: simple-webapp-color
spec:
  conatiners:
    - name: simple-webapp-color
      image: simple-webapp-color
      ports:
        - containerPort: 8080
---

     env: 
       - name: DB_Password
         valueFrom:
           secretRef:
              name: app-secret
              key: DB_Password
