security-context.yaml
capsh --print

---

apiVersion: v1
kind: Pod
metadata:
  name: web-pod
spec:
  securityContext:
    runAsUser: 1000
  containers:
    - name: ubuntu
      image: ubuntu
      command: ["sleep" , "3600"]
      
---

apiVersion: v1
kind: Pod
metadata:
  name: web-pod
spec:
  containers:
    - name: ubuntu
      image: ubuntu
      command: ["sleep" , "3600"]
      securityContext:
        runAsUser: 1000
        capabilities:
          add: ["MAC_ADMIN"]
      
---

apiVersion: v1
kind: Pod
metadata:
  name: web-pod
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
  containers:
    - name: busy
      image: busybox
      command: ["sh" , "-c" , "sleep 1h"]

---

apiVersion: v1
kind: Pod
metadata:
  name: security-context
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  volumes:
  - name: sect-cont-vol
    emptyDir: {}
  container:
  - name: sect-cont-demo
    image: busybox
    command: ["sh" ,"-c" ,"sleep 1h"]
    volumeMounts:
    - name: sect-cont-vol
      mountPath: /data/demo


---

apiVersion: v1
kind: Pod
metadata:
  name: web-pod
spec:
  containers:
    - name: ubuntu
      image: ubuntu
      command: ["sleep" , "3600"]
      securityContext:
        allowPrivilegeEscalation: false
        runAsNonRoot: true
        capabilities: 
          drop:
            - ALL
        readOnlyRootFilesystem: true
