serviceaccount.yaml
#kubectl create serviceaccount dashboard-sa
#kubectl get serviceaccount
#kubectl describe serviceaccount dashboard-sa
#kubectl describe secret dashboard-sa-token-kbbdm

apiVersion: v1
kind: Pod
metadata:
  name: my-kubernetes-dashboard
spec:
  containers:
    - name: my-kubernetes-dashboard
      image: my-kubernetes-dashboard
  serviceAccountName: dashboard-sa 
 #automountServiceAccountToken: false
 
 
#kubectl create serviceaccount dashboard-sa
#kubectl create token dashboard-sa


---
