volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: random-number-generator
spec:
  containers:
  - name: alpine
    image: alpine
    command: ["/bin/sh","-c"]
    args: ["shuf -i 0-100 -n 1 >> /opt/number.out;"]
    volumeMounts:
    - mountPath: /opt
      name: data-volume
  volumes:
  - name: data-volume
    hosthpath:
      path: /data
      type: Directory

---
  volumes:
  - name: data-volume
    awsElasticBlockStore:
      volumeID: <volume-ID>
      fsType: ext4

---
