headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h
spec:
  ports:
   - port: 3306
  selector:
     app: mysql
  clusterIP: None  

---

apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    app: mysql
spec:
  containers:
    - name: mysql
      image: mysql
  subdomain: mysql-h
  hostname: mysql-pod
