labels.yaml
apiVersion: v1
kind: Pod
metadata:
 name: myapp-pod
 labels:
   app: App1
   function: front-end
spec:
 containers:
   - name: myapp
     image: nginx
     ports:
     - containersPort: 8080
     

#kubectl get pods --selector app=App1
#kubectl get all --selector env=prod,bu=finance,tier=frontend

---

apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: App1
  ports:
  - protocol: Tcp
    port: 80
    targetPort: 9376

---
